# notes

./: Cargo.toml  README.md
examples/: 625befec-a4e8-4f6c-b91a-eec67a606c81-maszyna-turinga.org  8b5560a2-f104-4ad7-82b0-71a31e85ff74-wdi-6.org
output/: style.css
src/: main.rs  settings.rs
templates/: base.html  note.html  random.html  search.html
