[package]
name = "notes"
version = "0.1.0"
authors = ["Franciszek Madej <f.madej@protonmail.com>"]
edition = "2018"

[dependencies]
config = "0.9"
log = "0.4"
simple_logger = "1.11.0"
pulldown-cmark = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.4.3"
tera = "*"
notify = "4.0.15"
nanoid = "0.3.0"